# Subfilter

./: .gitignore  pyproject.toml  setup.py
examples/: filter_fit.py  filter_fit_ls.py  plot_spectra.py  spectra_file_simple.py
sandpit/: xarray_append.py
src/subfilter/: __init__.py  filters.py  spectra.py  subfilter.py
src/subfilter/cli/: __init__.py  arg.subfilter_file.py  opt.subfilter_file.py
src/subfilter/utils/: default_variables.py
subfilter/: weighted_filters.py
