[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "Subfilter"
dynamic = ["version"]
authors = [
  { name='Peter Clark', email='p.clark@reading.ac.uk'},
  { name='Todd Jones', email='t.r.jones@reading.ac.uk'},
]
license='MIT'
description='python code to compute sub-filter quantities from MONC output.'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "dask",
    "scipy",
    "xarray",
    "netCDF4",
    "tqdm",
    "loguru",
	]

[tool.setuptools.packages.find]
where = ["src/"]
#include = ["mynamespace.subpackage_a"]

[project.urls]
Homepage = "https://github.com/ReadingClouds/Subfilter"
Issues = "https://github.com/ReadingClouds/Subfilter/issues"

[tool.setuptools_scm]
